test/compile-fail/resolution/use/nested-private-public-struct/expected.txt
error: item `b` is private
  ┌─ ./test/compile-fail/resolution/use/nested-private-public-struct/top.rhdl:2:9
  │
2 │     mod b {
  │         - declared here
  ·
7 │ use a::b::c;
  │        ^ item is private
  │
  = modify the visibility of `b` if you want to use it

